@startuml RendererAndWindow

hide empty members
hide empty methods
skinparam packageStyle Frame
skinparam PackageBackgroundColor Lavender


enum RenderAPI {
        OpenGL    
        DirectX
    }


package Render {
    interface RenderCommandImpl {
        void Clear()
        void SetClearColor()
        void DrawVertexArray()
        void DrawIndexed()
        ...()
    }

    OpenGLRenderCommand --|> RenderCommandImpl

    class RenderCommand {
        static RenderAPI s_renderAPI
        static RenderCommandImpl* s_renderCommandImpl

        static void Init() (determine api to use)
        static void Clear()
        static void SetClearColor()
        static void DrawVertexArray()
        static void DrawIndexed()
        ...()
    }

    RenderCommandImpl --* RenderCommand
    RenderAPI -- RenderCommand
}


package Window {
    enum WindowProvider {
        GLFW
        Windows
        Linux
    }

    abstract class Window {
        WindowProvider s_windowProvider
        RenderContext m_context
        static void Init() (determine WindowProvider)
        static Window Create() (get impl)
        SetCallbackFunc()
        Update(poll events, swap buffers)
    }

    GLFWWindow --|> Window

    abstract class RenderContext {
        static RenderContext Create() (get impl)
        PreWindowSetup()
        PostWindowSetup(Window w)
        SetCurrentWindow(Window w)
        SwapBuffers(window)
    }

    OpenGLGLFWRenderContext --|> RenderContext
    RenderContext --* Window
    Window -- WindowProvider
    RenderContext -- WindowProvider
    RenderContext -- RenderAPI 
}


package Application {
    abstract class Application {
        m_window
        m_eventQueue

        MainOnEvent(Event e)
        MainOnUpdate()

        Run() (Entry point)

        OnEvent(Event e) = 0
        OnUpdate() = 0
    }

    Window::Update --> Application::MainOnEvent

    class UserApplication {
        OnEvent(Event e)
        OnUpdate()
    }

    UserApplication --|> Application
    Window --* Application
    Application -- RenderCommand
}

@enduml
